--- a/DrinkWater/DrinkWater/MainWindow.xaml
+++ b/DrinkWater/DrinkWater/MainWindow.xaml
@@ -190,7 +190,7 @@
             <Setter Property="Foreground" Value="{DynamicResource {x:Static SystemColors.ControlTextBrushKey}}"/>
             <Setter Property="BorderThickness" Value="0.5"/>
             <Setter Property="KeyboardNavigation.TabNavigation" Value="None"/>
-            <Setter Property="HorizontalContentAlignment" Value="Left"/>
+            <Setter Property="HorizontalContentAlignment" Value="Center"/>
             <Setter Property="FocusVisualStyle" Value="{x:Null}"/>
             <Setter Property="AllowDrop" Value="true"/>
             <Setter Property="ScrollViewer.PanningMode" Value="VerticalFirst"/>
@@ -303,7 +303,7 @@
             <Rectangle HorizontalAlignment="Left" Margin="986,159,0,61" Fill="#336AA6F5" RadiusX="20" RadiusY="20" Width="372" Panel.ZIndex="0" Grid.ColumnSpan="2"/>
             <Rectangle HorizontalAlignment="Left" Margin="94,159,0,61" Fill="#336AA6F5"  RadiusX="20" RadiusY="20" Width="659" Grid.ColumnSpan="2"/>
             <lvc:CartesianChart x:Name="Chart" Series="{Binding SeriesCollection}" LegendLocation="Right" Margin="127,245,719,96" Background="White" Grid.ColumnSpan="2">
-                <lvc:CartesianChart.AxisX >
+                <lvc:CartesianChart.AxisX  >
                     <lvc:Axis x:Name="Row" MinWidth="206"/>
                 </lvc:CartesianChart.AxisX>
                 <lvc:CartesianChart.AxisY >
