--- a/DrinkWater/DrinkWater/Settings.xaml
+++ b/DrinkWater/DrinkWater/Settings.xaml
@@ -7,6 +7,51 @@
         mc:Ignorable="d"
         Title="Settings" Height="1050" Width="1876">
     <Window.Resources>
+        <Style x:Key="Combobox" TargetType="{x:Type ComboBox}">
+            <Setter Property="Template">
+                <Setter.Value>
+                    <ControlTemplate TargetType="ComboBox">
+                        <Grid>
+                            <ToggleButton Grid.Column="2" Focusable="false" IsChecked="{Binding Path=IsDropDownOpen,Mode=TwoWay,RelativeSource={RelativeSource TemplatedParent}}" >
+                                <ToggleButton.Template>
+                                    <ControlTemplate>
+                                        <Grid>
+                                            <Grid.ColumnDefinitions>
+                                                <ColumnDefinition Width="5*" />
+                                                <ColumnDefinition Width="*" />
+                                            </Grid.ColumnDefinitions>
+                                            <Border x:Name="Border" Grid.ColumnSpan="2" CornerRadius="10"  Background="#6983D9" BorderBrush="Transparent" BorderThickness="1" />
+                                            <Border Grid.Column="0" CornerRadius="10,0,0,10"  Margin="1"  Background="#6983D9"  BorderBrush="Transparent" BorderThickness="0,0,1,0" />
+                                            <Path x:Name="Arrow" Grid.Column="1"  Fill="#F2F2F2" HorizontalAlignment="Center" VerticalAlignment="Center" Data="M 0 0 L 4 4 L 8 0 Z" Height="9" Stretch="Fill" Width="18" />
+                                        </Grid>
+                                        <ControlTemplate.Triggers>
+                                            <Trigger Property="ToggleButton.IsMouseOver" Value="true">
+                                                <Setter TargetName="Border" Property="Background" Value="#6983D9" />
+                                            </Trigger>
+                                            <Trigger Property="ToggleButton.IsChecked" Value="true">
+                                                <Setter TargetName="Border" Property="Background" Value="#6983D9" />
+                                            </Trigger>
+                                        </ControlTemplate.Triggers>
+                                    </ControlTemplate>
+                                </ToggleButton.Template>
+                            </ToggleButton>
+                            <ContentPresenter Name="ContentSite" IsHitTestVisible="False"  Content="{TemplateBinding SelectionBoxItem}" ContentTemplate="{TemplateBinding SelectionBoxItemTemplate}" ContentTemplateSelector="{TemplateBinding ItemTemplateSelector}" Margin="15"  />
+                            <TextBox x:Name="PART_EditableTextBox" Visibility="Hidden"  IsReadOnly="{TemplateBinding IsReadOnly}"/>
+                            <Popup Name="Popup" Placement="Bottom" IsOpen="{TemplateBinding IsDropDownOpen}" AllowsTransparency="True"  Focusable="False" PopupAnimation="Slide">
+                                <Grid  Name="DropDown" SnapsToDevicePixels="True" MinWidth="{TemplateBinding ActualWidth}" MaxHeight="{TemplateBinding MaxDropDownHeight}">
+                                    <Border x:Name="DropDownBorder" Background="#E1EDFD" />
+                                    <ScrollViewer SnapsToDevicePixels="True">
+                                        <StackPanel IsItemsHost="True" />
+                                    </ScrollViewer>
+                                </Grid>
+                            </Popup>
+                        </Grid>
+                    </ControlTemplate>
+                </Setter.Value>
+            </Setter>
+            <Style.Triggers>
+            </Style.Triggers>
+        </Style>
         <Style x:Key="ScrollButton" TargetType="{x:Type Button}">
 
             <Setter Property="Background" Value="Transparent"/>
@@ -206,29 +251,34 @@
 
             </Grid>
 
-            <ComboBox x:Name="NotificationsSettings" Padding="15" HorizontalAlignment="Left" Margin="107,657,0,0" VerticalAlignment="Top" Width="320" Height="64" SelectedIndex="0" FontSize="24" Visibility="Visible">
-                <ComboBoxItem Visibility="Collapsed" FontSize="24" Content="Notitfication schedule"/>
-                <ComboBoxItem Content="Every hour"/>
+            <ComboBox x:Name="NotificationsSettings" Padding="15" HorizontalAlignment="Left" Margin="107,657,0,0" VerticalAlignment="Top" Width="320" Height="64" SelectedIndex="0" FontSize="24" Visibility="Visible" SelectionChanged="NotificationsSettings_SelectionChanged" Style="{StaticResource Combobox}" BorderBrush="#FF562D2D" Foreground="#F2F2F2">
+                <ComboBoxItem Visibility="Collapsed" FontSize="24" Content="Notification schedule" Padding="15" Foreground="Black"/>
+                <ComboBoxItem  Foreground="Black" Content="Every hour"/>
                 <ComboBoxItem>
                     <StackPanel Orientation="Horizontal">
-                        <TextBlock Text="Custom input: " VerticalAlignment="Center"/>
-                        <TextBox x:Name="CustomPeriodTextBox" Text="0"/>
+                        <TextBlock Text="Custom input: " Foreground="Black" VerticalAlignment="Center"/>
+                        <TextBox x:Name="CustomPeriodTextBox"  Foreground="Black" Text="0"  Width="50" BorderBrush="Transparent"/>
                     </StackPanel>
                 </ComboBoxItem>
-                <ComboBoxItem Content="Every day"/>
+                <ComboBoxItem Content="Every day" Foreground="Black"/>
                 <ComboBoxItem>
-                    <StackPanel Orientation="Horizontal">
-                        <TextBlock Text="Disabled: " VerticalAlignment="Center"/>
-                        <CheckBox x:Name="IsDisabled"/>
+                    <StackPanel Orientation="Horizontal" >
+                        <TextBlock Text="Disabled: " VerticalAlignment="Center" Foreground="Black"/>
+                        <CheckBox x:Name="IsDisabled" VerticalAlignment="Center" BorderBrush="Transparent">
+                            <CheckBox.LayoutTransform>
+                            <ScaleTransform ScaleX="2" ScaleY="2" />
+                            </CheckBox.LayoutTransform>
+                        </CheckBox>
+
                     </StackPanel>
                 </ComboBoxItem>
             </ComboBox>
             <Grid x:Name="UserParametersGrid" HorizontalAlignment="Left" Height="Auto" Margin="701,290,0,0" VerticalAlignment="Top" Width="Auto" Visibility="Visible">
 
-                <ComboBox x:Name="GenderList" FontSize="24" HorizontalAlignment="Left" Margin="10,454,0,0" VerticalAlignment="Top" Width="235" Height="68" SelectedIndex="0" Visibility="Visible" Padding="20">
-                    <ComboBoxItem Visibility="Collapsed" Content="Gender"/>
-                    <ComboBoxItem x:Name="Male" IsSelected="False" Content="Male"/>
-                    <ComboBoxItem x:Name="Female" IsSelected="False" Content="Female"/>
+                <ComboBox x:Name="GenderList" FontSize="24" HorizontalAlignment="Left" Margin="10,454,0,0" VerticalAlignment="Top" Width="235" Height="68" SelectedIndex="0" Visibility="Visible" Padding="20" Style="{StaticResource Combobox}" Foreground="#F2F2F2" SelectionChanged="GenderList_SelectionChanged">
+                    <ComboBoxItem Visibility="Collapsed" Content="Gender" Foreground="Black"/>
+                    <ComboBoxItem x:Name="Male" IsSelected="False" Content="Male"  Foreground="Black"/>
+                    <ComboBoxItem x:Name="Female" IsSelected="False" Content="Female"  Foreground="Black"/>
                 </ComboBox>
                 <TextBox x:Name ="WakeUpTextBox" HorizontalAlignment="Left" Padding="10" Margin="380,466,0,0" Text="00:00:00" FontSize="28" TextWrapping="Wrap" VerticalAlignment="Top" Width="164" Height="68" Visibility="Visible" BorderBrush="#FF3C3D3F" BorderThickness="2" Foreground="#FF6E6C6C">
                     <TextBox.Resources>
@@ -273,7 +323,7 @@
             </Grid>
             <Button x:Name="ChangeAvatar" Content="Change Avatar" FontSize="24" HorizontalAlignment="Left" Margin="178,412,0,0" VerticalAlignment="Top" Width="179" Height="45" Click="ChangeAvatar_Click" Background="Transparent" BorderBrush="Transparent" Foreground="#FF0A2140" FontWeight="Bold"/>
             <Button Style="{DynamicResource ProfileButton}"  FontFamily="Segoe MDL2 Assets" Content="&#xE77B;" x:Name="ProfileWindowButton" FontSize="36" HorizontalAlignment="Left" Margin="1715,44,0,0" VerticalAlignment="Top" Height="68" Width="68" Click="ProfileWindowButton_Click" FontWeight="Bold" BorderBrush="#FF0A2140" Background="#FF0A2140" Foreground="#FFC2B9B9"/>
-            <Button Style="{DynamicResource ScrollButton}" x:Name="Main" FontFamily="Segoe MDL2 Assets" Content="&#xE76B;" HorizontalAlignment="Left" Height="36" Margin="45,33,0,0" VerticalAlignment="Top" Width="50" Click="Main_Click" RenderTransformOrigin="0.487,0.482" FontSize="36" Foreground="#FF0A2140"/>
+            <Button Style="{DynamicResource ScrollButton}" x:Name="Main" FontFamily="Segoe MDL2 Assets" Content="&#xE76B;" HorizontalAlignment="Left" Height="45" Margin="45,33,0,0" VerticalAlignment="Top" Width="50" Click="Main_Click" RenderTransformOrigin="0.487,0.482" FontSize="36" Foreground="#FF0A2140"/>
             <ComboBox HorizontalAlignment="Left" Height="8" Margin="301,85,0,0" VerticalAlignment="Top" Width="0"/>
             <Label Content="Settings" HorizontalAlignment="Left" Height="47" Margin="104,31,0,0" VerticalAlignment="Top" Width="102" FontSize="24" Foreground="#FF0A2140"/>
             <Label Content="Parameters" HorizontalAlignment="Left" Margin="701,177,0,0" VerticalAlignment="Top" FontSize="48" Foreground="#FF0A2140"/>
